src/lib/GISGrammarParser.js
// Generated from grammar/GISGrammar.g4 by ANTLR 4.13.2
// jshint ignore: start
import antlr4 from 'antlr4';
import GISGrammarListener from './GISGrammarListener.js';
import GISGrammarVisitor from './GISGrammarVisitor.js';



const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.atn.PredictionContextCache();

export default class GISGrammarParser extends antlr4.Parser {

    static grammarFileName = "GISGrammar.g4";
    static literalNames = [ null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, null, 
                            null, null, null, null, null, null, null, "'0..1'", 
                            "'1..1'", "'0..*'", "'1..*'", null, "'#'", "'.'", 
                            "'('", "')'", "','", "';'" ];
    static symbolicNames = [ null, "CREATE_SYMBOL", "GIS_SYMBOL", "ENTITY_SYMBOL", 
                             "USING_SYMBOL", "USE_SYMBOL", "GENERATE_SYMBOL", 
                             "IDENTIFIER_SYMBOL", "RELATIONSHIP_SYMBOL", 
                             "DISPLAYSTRING_SYMBOL", "REQUIRED_SYMBOL", 
                             "UNIQUE_SYMBOL", "BIDIRECTIONAL_SYMBOL", "MAPPEDBY_SYMBOL", 
                             "LAYER_SYMBOL", "TILE_SYMBOL", "GEOJSON_SYMBOL", 
                             "GEOMETRY_TYPE_SYMBOL", "AS_SYMBOL", "URL_SYMBOL", 
                             "SLD_SYMBOL", "EDITABLE_SYMBOL", "FILL_COLOR_SYMBOL", 
                             "STROKE_COLOR_SYMBOL", "FILL_OPACITY_SYMBOL", 
                             "STROKE_OPACITY_SYMBOL", "STROKE_WIDTH_SYMBOL", 
                             "WMS_SYMBOL", "STYLE_SYMBOL", "IS_BASE_LAYER_SYMBOL", 
                             "HIDDEN_SYMBOL", "SORTABLE_SYMBOL", "MAP_SYMBOL", 
                             "SET_SYMBOL", "DEPLOYMENT_SYMBOL", "URL_WMS_SYMBOL", 
                             "LAYERNAME_SYMBOL", "FORMAT_SYMBOL", "CRS_SYMBOL", 
                             "BBOX_CRS_SYMBOL", "MINX_SYMBOL", "MINY_SYMBOL", 
                             "MAXX_SYMBOL", "MAXY_SYMBOL", "QUERYABLE_SYMBOL", 
                             "ATTRIBUTION_SYMBOL", "VERSION_SYMBOL", "ZERO_ONE_SYMBOL", 
                             "ONE_ONE_SYMBOL", "ZERO_MANY_SYMBOL", "ONE_MANY_SYMBOL", 
                             "TYPE", "POUND_SYMBOL", "DOT_SYMBOL", "OPAR_SYMBOL", 
                             "CPAR_SYMBOL", "COMMA_SYMBOL", "SCOL_SYMBOL", 
                             "HEX_COLOR", "INT_NUMBER", "FLOAT_NUMBER", 
                             "COMMENT", "WHITESPACE", "IDENTIFIER", "QUOTED_TEXT" ];
    static ruleNames = [ "parse", "sentence", "createStatement", "createGIS", 
                         "createEntity", "createLayer", "createTileLayer", 
                         "createGeoJSONLayer", "sldCustomBody", "createWmsStyle", 
                         "createWmsLayer", "wmsSubLayer", "wmsUrl", "wmsLayerName", 
                         "wmsFormatName", "wmsCrs", "wmsBboxCrs", "wmsMinX", 
                         "wmsMinY", "wmsMaxX", "wmsMaxY", "wmsBboxGroup", 
                         "wmsStyles", "wmsQueryable", "wmsAttribution", 
                         "wmsVersion", "createSortableMap", "createMap", 
                         "mapLayer", "useGIS", "generateGIS", "setDeployment", 
                         "deploymentProperty", "property", "propertyDefinition", 
                         "relationshipDefinition", "mappedRelationshipDefinition", 
                         "ownedRelationshipDefinition", "cardinality", "srid", 
                         "identifier", "text", "hexColor", "floatNumber", 
                         "intNumber" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = GISGrammarParser.ruleNames;
        this.literalNames = GISGrammarParser.literalNames;
        this.symbolicNames = GISGrammarParser.symbolicNames;
    }



	parse() {
	    let localctx = new ParseContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, GISGrammarParser.RULE_parse);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 91; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 90;
	            this.sentence();
	            this.state = 93; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) === 0 && ((1 << _la) & 98) !== 0) || _la===33);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sentence() {
	    let localctx = new SentenceContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, GISGrammarParser.RULE_sentence);
	    try {
	        this.state = 99;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 95;
	            this.createStatement();
	            break;
	        case 5:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 96;
	            this.useGIS();
	            break;
	        case 6:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 97;
	            this.generateGIS();
	            break;
	        case 33:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 98;
	            this.setDeployment();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createStatement() {
	    let localctx = new CreateStatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, GISGrammarParser.RULE_createStatement);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 101;
	        this.match(GISGrammarParser.CREATE_SYMBOL);
	        this.state = 105;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 2:
	            this.state = 102;
	            this.createGIS();
	            break;
	        case 3:
	            this.state = 103;
	            this.createEntity();
	            break;
	        case 15:
	        case 16:
	        case 27:
	        case 31:
	        case 32:
	            this.state = 104;
	            this.createLayer();
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createGIS() {
	    let localctx = new CreateGISContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, GISGrammarParser.RULE_createGIS);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 107;
	        this.match(GISGrammarParser.GIS_SYMBOL);
	        this.state = 108;
	        this.identifier();
	        this.state = 109;
	        this.match(GISGrammarParser.USING_SYMBOL);
	        this.state = 110;
	        this.srid();
	        this.state = 111;
	        this.match(GISGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createEntity() {
	    let localctx = new CreateEntityContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, GISGrammarParser.RULE_createEntity);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 113;
	        this.match(GISGrammarParser.ENTITY_SYMBOL);
	        this.state = 114;
	        this.identifier();
	        this.state = 115;
	        this.match(GISGrammarParser.OPAR_SYMBOL);
	        this.state = 116;
	        this.property();
	        this.state = 121;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===56) {
	            this.state = 117;
	            this.match(GISGrammarParser.COMMA_SYMBOL);
	            this.state = 118;
	            this.property();
	            this.state = 123;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 124;
	        this.match(GISGrammarParser.CPAR_SYMBOL);
	        this.state = 125;
	        this.match(GISGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createLayer() {
	    let localctx = new CreateLayerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, GISGrammarParser.RULE_createLayer);
	    try {
	        this.state = 133;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 127;
	            this.createTileLayer();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 128;
	            this.createGeoJSONLayer();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 129;
	            this.createWmsStyle();
	            break;

	        case 4:
	            this.enterOuterAlt(localctx, 4);
	            this.state = 130;
	            this.createWmsLayer();
	            break;

	        case 5:
	            this.enterOuterAlt(localctx, 5);
	            this.state = 131;
	            this.createMap();
	            break;

	        case 6:
	            this.enterOuterAlt(localctx, 6);
	            this.state = 132;
	            this.createSortableMap();
	            break;

	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createTileLayer() {
	    let localctx = new CreateTileLayerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, GISGrammarParser.RULE_createTileLayer);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 135;
	        this.match(GISGrammarParser.TILE_SYMBOL);
	        this.state = 136;
	        this.match(GISGrammarParser.LAYER_SYMBOL);
	        this.state = 137;
	        this.identifier();
	        this.state = 140;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===18) {
	            this.state = 138;
	            this.match(GISGrammarParser.AS_SYMBOL);
	            this.state = 139;
	            this.text();
	        }

	        this.state = 142;
	        this.match(GISGrammarParser.OPAR_SYMBOL);
	        this.state = 143;
	        this.match(GISGrammarParser.URL_SYMBOL);
	        this.state = 144;
	        this.text();
	        this.state = 145;
	        this.match(GISGrammarParser.CPAR_SYMBOL);
	        this.state = 146;
	        this.match(GISGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createGeoJSONLayer() {
	    let localctx = new CreateGeoJSONLayerContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, GISGrammarParser.RULE_createGeoJSONLayer);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 148;
	        this.match(GISGrammarParser.GEOJSON_SYMBOL);
	        this.state = 149;
	        this.match(GISGrammarParser.LAYER_SYMBOL);
	        this.state = 150;
	        this.identifier();
	        this.state = 153;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===18) {
	            this.state = 151;
	            this.match(GISGrammarParser.AS_SYMBOL);
	            this.state = 152;
	            this.text();
	        }

	        this.state = 155;
	        this.match(GISGrammarParser.OPAR_SYMBOL);
	        this.state = 156;
	        this.identifier();
	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===21) {
	            this.state = 157;
	            this.match(GISGrammarParser.EDITABLE_SYMBOL);
	        }

	        this.state = 160;
	        this.match(GISGrammarParser.COMMA_SYMBOL);
	        this.state = 161;
	        this.match(GISGrammarParser.FILL_COLOR_SYMBOL);
	        this.state = 162;
	        this.hexColor();
	        this.state = 163;
	        this.match(GISGrammarParser.COMMA_SYMBOL);
	        this.state = 164;
	        this.match(GISGrammarParser.STROKE_COLOR_SYMBOL);
	        this.state = 165;
	        this.hexColor();
	        this.state = 166;
	        this.match(GISGrammarParser.COMMA_SYMBOL);
	        this.state = 167;
	        this.match(GISGrammarParser.FILL_OPACITY_SYMBOL);
	        this.state = 168;
	        this.floatNumber();
	        this.state = 169;
	        this.match(GISGrammarParser.COMMA_SYMBOL);
	        this.state = 170;
	        this.match(GISGrammarParser.STROKE_OPACITY_SYMBOL);
	        this.state = 171;
	        this.floatNumber();
	        this.state = 172;
	        this.match(GISGrammarParser.CPAR_SYMBOL);
	        this.state = 173;
	        this.match(GISGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	sldCustomBody() {
	    let localctx = new SldCustomBodyContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, GISGrammarParser.RULE_sldCustomBody);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 175;
	        this.match(GISGrammarParser.GEOMETRY_TYPE_SYMBOL);
	        this.state = 176;
	        this.match(GISGrammarParser.TYPE);
	        this.state = 177;
	        this.match(GISGrammarParser.COMMA_SYMBOL);
	        this.state = 179;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===22) {
	            this.state = 178;
	            this.match(GISGrammarParser.FILL_COLOR_SYMBOL);
	        }

	        this.state = 182;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	        if(la_===1) {
	            this.state = 181;
	            this.hexColor();

	        }
	        this.state = 185;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,10,this._ctx);
	        if(la_===1) {
	            this.state = 184;
	            this.match(GISGrammarParser.COMMA_SYMBOL);

	        }
	        this.state = 188;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===23) {
	            this.state = 187;
	            this.match(GISGrammarParser.STROKE_COLOR_SYMBOL);
	        }

	        this.state = 191;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===58) {
	            this.state = 190;
	            this.hexColor();
	        }

	        this.state = 194;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,13,this._ctx);
	        if(la_===1) {
	            this.state = 193;
	            this.match(GISGrammarParser.COMMA_SYMBOL);

	        }
	        this.state = 197;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===24) {
	            this.state = 196;
	            this.match(GISGrammarParser.FILL_OPACITY_SYMBOL);
	        }

	        this.state = 201;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,15,this._ctx);
	        if(la_===1) {
	            this.state = 199;
	            this.floatNumber();

	        } else if(la_===2) {
	            this.state = 200;
	            this.intNumber();

	        }
	        this.state = 204;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,16,this._ctx);
	        if(la_===1) {
	            this.state = 203;
	            this.match(GISGrammarParser.COMMA_SYMBOL);

	        }
	        this.state = 207;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===25) {
	            this.state = 206;
	            this.match(GISGrammarParser.STROKE_OPACITY_SYMBOL);
	        }

	        this.state = 211;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,18,this._ctx);
	        if(la_===1) {
	            this.state = 209;
	            this.floatNumber();

	        } else if(la_===2) {
	            this.state = 210;
	            this.intNumber();

	        }
	        this.state = 214;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===56) {
	            this.state = 213;
	            this.match(GISGrammarParser.COMMA_SYMBOL);
	        }

	        this.state = 217;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===26) {
	            this.state = 216;
	            this.match(GISGrammarParser.STROKE_WIDTH_SYMBOL);
	        }

	        this.state = 221;
	        this._errHandler.sync(this);
	        switch (this._input.LA(1)) {
	        case 60:
	        	this.state = 219;
	        	this.floatNumber();
	        	break;
	        case 59:
	        	this.state = 220;
	        	this.intNumber();
	        	break;
	        case 55:
	        	break;
	        default:
	        	break;
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	createWmsStyle() {
	    let localctx = new CreateWmsStyleContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 18, GISGrammarParser.RULE_createWmsStyle);
	    var _la = 0;
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 223;
	        this.match(GISGrammarParser.WMS_SYMBOL);
	        this.state = 224;
	        this.match(GISGrammarParser.STYLE_SYMBOL);
	        this.state = 225;
	        this.identifier();
	        this.state = 226;
	        this.match(GISGrammarParser.OPAR_SYMBOL);
	        this.state = 229;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===20) {
	            this.state = 227;
	            this.match(GISGrammarParser.SLD_SYMBOL);
	            this.state = 228;
	            this.text();
	        }

	        this.state = 232;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===56) {
	            this.state = 231;
	            this.match(GISGrammarParser.COMMA_SYMBOL);
	        }

	        this.state = 235;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===17) {
	            this.state = 234;
	            this.sldCustomBody();
	        }

	        this.state = 237;
	        this.match(GISGrammarParser.CPAR_SYMBOL);
	        this.state = 238;
	        this.match(GISGrammarParser.SCOL_SYMBOL);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


